# breakout-game

./: .gitattributes  .gitignore  CMakeLists.txt  README.md
includes/: glad.c
includes/glad/: glad.h
includes/learnopengl/: camera.h  filesystem.h
src/: ball_object_collisions.cpp  ball_object_collisions.h  game.cpp  game.h  game_level.cpp  game_level.h  game_object.cpp  game_object.h  main.cpp  post_processor.cpp  post_processor.h  power_up.h  resource_manager.cpp  resource_manager.h  shader.cpp  shader.h  sprite_renderer.cpp  sprite_renderer.h  text_renderer.cpp  text_renderer.h  texture.cpp  texture.h
src/levels/: extra.lvl
src/shaders/: particle.fs  particle.vs  post_processing.fs  post_processing.vs  sprite.fs  sprite.vs  text_2d.fs  text_2d.vs
